docs/versioned_docs/version-4.6.x/user-guides/supportability.md
---
id: supportability
title: Supportability
keywords:
 - Supportability
description: This guide explains about the supportability tool that collects OpenEBS specific information from the cluster using the kubectl plugin command-line tool.
---

The supportability tool collects OpenEBS specific information from the cluster using the [kubectl plugin](kubectl-openebs.md) command-line tool. It uses the dump command, which interacts with the OpenEBS services to build an archive (ZIP) file that acts as a placeholder for the bundled information.

### Using the Supportability Tool

To bundle Replicated PV Mayastor's complete system information, execute:

**Command**

```
kubectl openebs dump system -n openebs -d <output_directory_path>
```

To view all the available options and sub-commands that can be used with the dump command, execute:

**Command**

```
kubectl openebs dump --help
```

**Sample Output**

```
Supportability - collects state & log information of services and dumps it to a tar file

Usage: kubectl-openebs dump [OPTIONS] <COMMAND>

Commands:
  system  Collects entire system information
  help    Print this message or the help of the given subcommand(s)

Options:
  -t, --timeout <TIMEOUT>
          Specifies the timeout value to interact with other modules of system [default: 30s]
  -s, --since <SINCE>
          Period states to collect all logs from last specified duration [default: 24h]
  -l, --loki-endpoint <LOKI_ENDPOINT>
          Endpoint of LOKI service, if left empty then it will try to parse endpoint from Loki service(K8s service resource), if the tool is unable to parse from service then logs will be collected using Kube-apiserver
  -e, --etcd-endpoint <ETCD_ENDPOINT>
          Endpoint of ETCD service, if left empty then will be parsed from the internal service name
  -d, --output-directory-path <OUTPUT_DIRECTORY_PATH>
          Output directory path to store archive file [default: ./]
      --tenant-id <TENANT_ID>
          The tenant id to be used to query loki logs [default: openebs]
      --logging-label-selectors <LOGGING_LABEL_SELECTORS>
          Logging label selectors [default: openebs.io/logging=true]
  -n, --namespace <NAMESPACE>
          Namespace where openebs is installed. If unset, defaults to the default namespace in the current context
  -k, --kubeconfig <KUBECONFIG>
          Path to kubeconfig file
  -h, --help
          Print help

Supportability - collects state & log information of services and dumps it to a tar file.
```

:::note
The information collected by the supportability tool is solely used for debugging purposes. The content of these files is human-readable and can be reviewed, deleted, or redacted as necessary to adhere to the organization's data protection/privacy commitments and security policies before transmitting the bundles.
:::

### Collected Event Data

When the [Eventing Aggregator](replicated-storage-user-guide/replicated-pv-mayastor/advanced-operations/eventing-aggregator.md) is deployed, the dump command also collects Replicated PV Mayastor cluster events into the archive.

| File | Description |
| :--- | :--- |
| `mayastor/events.ndjson` | The collected events, one JSON object per line. |
| `mayastor/events-source.txt` | Records the source from which the events were collected, either `loki` or the name of the aggregator pod. |

Events are collected from Loki when it is available, and from the aggregator's ephemeral volume when it is not. The `--since` value passed to the dump command determines the time window of events collected.

Because `events.ndjson` is a plain newline-delimited JSON file, it can be analysed offline without a cluster connection by passing it to the `--from-file` option of the `get events` command. Refer to the [Eventing Aggregator](replicated-storage-user-guide/replicated-pv-mayastor/advanced-operations/eventing-aggregator.md#analyse-events-offline) documentation for details.

<!--
Refer the section [Does the supportability tool expose sensitive data?](#does-the-supportability-tool-expose-sensitive-data) for more details.

The archive files generated by the dump command are stored in the specified output directories. The tables below specify the path and the content that will be stored in each archive file.

## Topology Information
<table>
 <tr> 
 <th>Folder Path</th>
 <th>Mayastor Resource</th>
 <th>Node Name</th>
 <th>File Name</th>
 <th>Description</th>
 </tr>
  <tr>
      <td>./topology/node</td>
      <td>node</td>
      <td>node-01</td>
      <td>node-01-topology.json</td>
      <td>Topology of node-01(All node topologies will available here)</td>
   </tr>
  <tr>
      <td>./topology/pool</td>
      <td>pool</td>
      <td>pool-01</td>
      <td>pool-01-topology.json</td>
      <td>Topology of pool-01 (All pool topologies will available here)</td>
   </tr>
     <tr>
      <td>./topology/volume </td>
      <td>volume</td>
      <td>volume-01</td>
      <td>volume-01-topology.json</td>
      <td>Topology information of volume-01 (All volume topologies will available here)</td>
   </tr>
</table>


## Historical Logs
<table>
 <tr>
    <th>Folder Path</th>
    <th>Host Name(optional)</th>
    <th>Component</th>
    <th>File Name</th>
 </tr>
   <tr>
    <td>./logs/core-agents </td>
    <td>-</td>
    <td>agent-core</td>
    <td>loki-agent-core.log</td>
   </tr>
   <tr>
     <td>./logs/rest</td>
     <td>-</td>
     <td>api-rest</td>
     <td>loki-api-rest.log</td>
   </tr>
   <tr>
      <td>./logs/csi-controller </td>
      <td>-</td>
      <td>csi-attacher</td>
      <td>loki-csi-attacher.log</td>
   </tr>
      <tr>
      <td>./logs/csi-controller</td>
      <td>-</td>
      <td>csi-controller</td>
      <td>loki-csi-controller.log</td>
   </tr>
   <tr>
      <td>./logs/csi-controller</td>
      <td>-</td>
      <td>csi-provisioner</td>
      <td>loki-csi-provisioner.log</td>
   </tr>
     <tr>
      <td>./logs/diskpool-operator</td>
      <td>-</td>
      <td>operator-diskpool</td>
      <td>loki-operator-disk-pool.log</td>
   </tr>
   <tr>
      <td>./logs/mayastor</td>
      <td>node-02</td>
      <td>csi-driver-registrar</td>
      <td>node-02-loki-csi-driver-registrar.log</td>
   </tr>
    <tr>
      <td>./logs/mayastor</td>
      <td>node-01 </td>
      <td>csi-node</td>
      <td>node-01-loki-csi-node.log</td>
   </tr>
     <tr>
      <td>./logs/mayastor</td>
      <td>node-01</td>
      <td>io-engine</td>
      <td>node-01-loki-mayastor.log</td>
   </tr>
    <tr>
      <td>./logs/blot</td>
      <td>node-02</td>
      <td>io-engine</td>
      <td>node-02-loki-mayastor.log</td>
   </tr>
     <tr>
      <td>./logs/etcd</td>
      <td>node-03</td>
      <td>etcd</td>
      <td>node-03-loki-etcd.log</td>
   </tr>
</table>

## Configuration Details of Kubernetes Resources
<table>
  <tr>
        <th>Folder Path</th>
        <th>Component </th>
        <th>File Name</th>
  </tr>
    <tr>
      <td>./k8s_resources/configurations/</td>
      <td>agent-core (Deployment)</td>
      <td>mayastor-agent-core.yaml</td>
   </tr>
    <tr>
      <td>./k8s_resources/configurations/</td>
      <td>api-rest</td>
      <td>mayastor-api-rest.yaml</td>
   </tr>
     <tr>
      <td>./k8s_resources/configurations/</td>
      <td>si-controller (Deployment)</td>
      <td>mayastor-csi-controller.yaml</td>
   </tr>
     <tr>
      <td>./k8s_resources/configurations/</td>
      <td>csi-node(Daemonset)</td>
      <td>mayastor-csi-node.yaml</td>
   </tr>
     <tr>
      <td>./k8s_resources/configurations/</td>
      <td>etcd (Statefullset)</td>
      <td>mayastor-etcd.yaml</td>
   </tr>
     <tr>
      <td>./k8s_resources/configurations/</td>
      <td>loki (Statefullset)</td>
      <td>mayastor-loki-yaml</td>
   </tr>
   <tr>
      <td>./k8s_resources/configurations/</td>
      <td>operator-diskpool</td>
      <td>mayastor-operator-disk-pool.yaml</td>
   </tr>
     <tr>
      <td>./k8s_resources/configurations/</td>
      <td>promtail(Daemonset)</td>
      <td>mayastor-promtail.yaml</td>
   </tr>
     <tr>
      <td>./k8s_resources/configurations/</td>
      <td>io-engine (Daemonset)</td>
      <td>io-engine.yaml</td>
   </tr>
     <tr>
      <td>./k8s_resources/configurations/</td>
      <td>disk_pools</td>
      <td>k8s_diskPools.yaml</td>
   </tr>
     <tr>
      <td>./k8s_resources</td>
      <td>events</td>
      <td>k8s_events.yaml</td>
   </tr>
     <tr>
      <td>./k8s_resources/configurations/</td>
      <td>all pods(deployed under the same namespace as Mayastor)</td>
      <td>pods.yaml</td>
   </tr>
     <tr>
      <td>./k8s_resources</td>
      <td>volume snapshot classes</td>
      <td>volume_snapshot_classes.yaml </td>
   </tr>
     <tr>
      <td>./k8s_resources</td>
      <td>volume snapshot contents</td>
      <td>volume_snapshot_contents.yaml </td>
   </tr>
</table>

## etcd dump information
<table>
<tr>
 <th>Folder Path</th>
 <th>Component</th>
 <th>File Name</th>
</tr>
<tr>
 <td>./</td>
 <td>etcd</td>
 <td>etcd_dump</td>
</tr>
</table>


## Supportability Tool Logs
<table>
<tr>
<th>Folder Path</th>
<th>Component</th>
<th>File Name</th>
</tr>
<tr> 
 <td>./</td>
 <td>Support-tool</td>
 <td>support_tool_logs.log</td>
</tr>
</table>

-->

## Does the supportability tool expose sensitive data?

The supportability tool generates support bundles, which are used for debugging purposes. These bundles are created in response to the user's invocation of the tool and can be transmitted only by the user.
Below is the information collected by the supportability tool that might be identified as 'sensitive' based on the organization's data protection/privacy commitments and security policies.

**Logs:**
The default installation includes the deployment of a log aggregation subsystem based on Grafana Loki. All the pods deployed in the same namespace as OpenEBS and labelled with `openebs.io/logging=true` will have their logs incorporated within this centralized collector. These logs may include the following information:
- Kubernetes (K8s) node hostnames
- IP addresses
    - container addresses
- API endpoints
    - Mayastor
    - K8s
- Container names
- K8s Persistent Volume names
- DiskPool names
- Block device details (except the content)

 **K8s Definition Files:**
 The support bundle includes definition files for all the OpenEBS components. Some of these are listed below:
- Deployments
- DaemonSets
- StatefulSets
- VolumeSnapshotClass
- VolumeSnapshotContent

**K8s Events:**
The archive files generated by the supportability tool contain information on all the events of the Kubernetes cluster present in the same namespace as OpenEBS.

**etcd Dump:**
The default installation deploys an etcd instance for its exclusive use. This key-value pair is used to persist state information. It is required for diagnostic and troubleshooting purposes. The etcd dump archive file consists of the following information:
- Kubernetes node hostnames
- IP addresses
- PVC/PV names
- Container names
    - Openebs
    - User applications within the namespace where OpenEBS is installed
- Block device details (except data content)

:::info
The list provided above is frequently reviewed and updated by the OpenEBS maintainers. However, it might not be fully exhaustive, given that "sensitive information" is a subjective term.
:::
 